<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".dashboard.PlearnDashFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_cat_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="1dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8"
                android:drawableTop="@drawable/ic_user"
                android:gravity="center"
                android:text="@string/profile"
                android:textAllCaps="true"
                android:textSize="14sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_attendance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            app:cardCornerRadius="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8"
                android:drawableTop="@drawable/ic_attendance"
                android:gravity="center"
                android:text="@string/attendance"
                android:textAllCaps="true"
                android:textSize="14sp" />


        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_syllabus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="1dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8"
                android:drawableTop="@drawable/syllabus"
                android:gravity="center"
                android:text="@string/syllabus"
                android:textAllCaps="true"
                android:textSize="14sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_time_table"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="1dp"
            android:layout_weight="1"
            app:cardCornerRadius="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8"
                android:drawableTop="@drawable/ic_time_table"
                android:gravity="center"
                android:text="@string/time_table"
                android:textAllCaps="true"
                android:textSize="14sp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_test_result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="1dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8"
                android:drawableTop="@drawable/test_result"
                android:gravity="center"
                android:text="@string/test_result"
                android:textAllCaps="true"
                android:textSize="14sp" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_test_syllabus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="1dp"
            android:layout_weight="1"
            app:cardCornerRadius="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8"
                android:drawableTop="@drawable/test_syllabus"
                android:gravity="center"
                android:text="@string/test_syllabus"
                android:textAllCaps="true"
                android:textSize="14sp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_bus_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="1dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8"
                android:drawableTop="@drawable/bus_location"
                android:gravity="center"
                android:text="@string/bus_location"
                android:textAllCaps="true"
                android:textSize="14sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="1dp"
            android:layout_weight="1"
            app:cardCornerRadius="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8"
                android:drawableTop="@drawable/downloads"
                android:gravity="center"
                android:text="@string/download"
                android:textAllCaps="true"
                android:textSize="14sp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>