<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    tools:context=".dashboard.PlearnActivity">

    <include
        android:id="@+id/include_bar"
        layout="@layout/app_bar"/>

   <FrameLayout
       android:id="@+id/frame_plearn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/ll_bottom_menu"
       android:layout_below="@+id/include_bar">

   </FrameLayout>
    
    <LinearLayout
        android:id="@+id/ll_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/holo_green_dark"
        android:orientation="horizontal"
        android:weightSum="12"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="3"
            android:drawableTop="@drawable/ic_home"
            android:gravity="center"
            android:text="Home"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_notice_board"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/notice_board"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:drawableTop="@drawable/notice_board"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_faq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/faq"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:drawableTop="@drawable/ic_faq"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/tv_referal"
            android:text="@string/referral"
            android:textColor="@color/white"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@drawable/ic_referal"/>

    </LinearLayout>

</RelativeLayout>