<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".profile.InformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:orientation="horizontal"
            android:padding="@dimen/margin_8"
            android:weightSum="8">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_address"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_delete"
                app:civ_border_color="@android:color/holo_red_light"
                app:civ_border_width="1dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:gravity="center|start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="@dimen/margin_4"
                    android:text="@string/address"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:id="@+id/tv_address"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/demo_address"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_8"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:orientation="horizontal"
            android:padding="@dimen/margin_8"
            android:weightSum="8">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_contact"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_delete"
                app:civ_border_color="@android:color/holo_blue_light"
                app:civ_border_width="1dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:gravity="center|start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="@dimen/margin_4"
                    android:text="@string/contact_no"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:id="@+id/tv_contactno"
                    android:text="+91 9876543122"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_8"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:orientation="horizontal"
            android:padding="@dimen/margin_8"
            android:weightSum="8">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_email"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_delete"
                app:civ_border_color="@android:color/holo_orange_dark"
                app:civ_border_width="1dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:gravity="center|start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="@dimen/margin_4"
                    android:text="@string/email_id"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:id="@+id/tv_email"
                    android:text="@string/demo_mail"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_weight="1"
                android:background="@drawable/circular_edges"
                android:gravity="center"
                android:padding="@dimen/margin_8"
                android:id="@+id/tv_rollno"
                android:text="Roll no  :  1520"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_weight="1"
                android:background="@drawable/circular_edges"
                android:gravity="center"
                android:id="@+id/tv_classname"
                android:padding="@dimen/margin_8"
                android:text="Standard  :  10th"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>